# engineer_vision

./: README.md  all.launch.py
Camera/log/: error_20250216-213507.210521  warning_20250211-204249.72456  warning_20250216-222300.380582
install/: local_setup.sh  setup.sh
install/Camera/log/: error_20250115-130028.84326  error_20250116-115433.24329  error_20250116-124121.17471  error_20250116-131122.35178  error_20250117-103643.13936  error_20250117-132606.31642  error_20250117-135304.36805  error_20250117-155649.23069  error_20250117-194439.59250  warning_20250116-142806.51200  warning_20250116-194758.67784  warning_20250117-142721.37151  warning_20250119-130527.80622  warning_20250211-193615.38839
install/camera_display/lib/camera_display/: camera_display
install/camera_display/share/ament_index/resource_index/parent_prefix_path/: camera_display
install/camera_display/share/camera_display/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_interface/include/camera_interface/camera_interface/msg/: corner.h  rosidl_generator_cpp__visibility_control.hpp
install/camera_interface/include/camera_interface/camera_interface/msg/detail/: corner__rosidl_typesupport_fastrtps_c.h  corner__rosidl_typesupport_fastrtps_cpp.hpp  corner__rosidl_typesupport_introspection_c.h  corner__struct.h  corner__traits.hpp  corner__type_support.c  corner__type_support.cpp  port__functions.c  port__rosidl_typesupport_fastrtps_c.h  port__rosidl_typesupport_fastrtps_cpp.hpp  port__rosidl_typesupport_introspection_c.h  port__rosidl_typesupport_introspection_cpp.hpp  port__struct.h  port__traits.hpp  port__type_support.c  port__type_support.h  port__type_support.hpp
install/camera_interface/local/lib/python3.10/dist-packages/camera_interface/: _camera_interface_s.ep.rosidl_typesupport_c.c
install/camera_interface/share/camera_interface/: local_setup.sh  package.sh
install/camera_interface/share/camera_interface/cmake/: camera_interfaceConfig.cmake  camera_interface__rosidl_typesupport_cExport.cmake  camera_interface__rosidl_typesupport_introspection_cExport.cmake  export_camera_interface__rosidl_generator_cExport.cmake  export_camera_interface__rosidl_generator_cppExport.cmake
install/camera_interface/share/camera_interface/msg/: Corner.idl
install/corner_detection/lib/corner_detection/: corner_detection_node
install/corner_detection/share/ament_index/resource_index/parent_prefix_path/: corner_detection
install/corner_detection/share/corner_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/image_display/share/image_display/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/image_processing/share/ament_index/resource_index/package_run_dependencies/: image_processing
install/image_processing/share/image_processing/: local_setup.sh  package.sh
install/mindvision_camera/lib/mindvision_camera/: mindvision_camera_node
install/mindvision_camera/share/mindvision_camera/: package.sh
install/mindvision_camera/share/mindvision_camera/config/: camera_params.yaml
install/pose_resolve/lib/pose_resolve/: pose_resolve_node
install/pose_resolve/share/pose_resolve/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/serial_interface/include/serial_interface/serial_interface/msg/: port.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/serial_interface/include/serial_interface/serial_interface/msg/detail/: port__builder.hpp  port__functions.c  port__rosidl_typesupport_fastrtps_c.h  port__rosidl_typesupport_fastrtps_cpp.hpp  port__rosidl_typesupport_introspection_cpp.hpp  port__struct.h  port__struct.hpp  port__type_support.h  port__type_support.hpp
install/serial_interface/local/lib/python3.10/dist-packages/serial_interface/: _serial_interface_s.ep.rosidl_typesupport_c.c  _serial_interface_s.ep.rosidl_typesupport_fastrtps_c.c  (+1 more)
install/serial_interface/share/ament_index/resource_index/rosidl_interfaces/: serial_interface
install/serial_interface/share/serial_interface/: local_setup.dsv  package.dsv  package.ps1  package.sh
install/serial_interface/share/serial_interface/cmake/: export_serial_interface__rosidl_generator_cExport-noconfig.cmake  export_serial_interface__rosidl_generator_cExport.cmake  export_serial_interface__rosidl_generator_cppExport.cmake  export_serial_interface__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  serial_interfaceConfig.cmake  serial_interface__rosidl_typesupport_cExport-noconfig.cmake  serial_interface__rosidl_typesupport_cExport.cmake  serial_interface__rosidl_typesupport_cppExport-noconfig.cmake  serial_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  serial_interface__rosidl_typesupport_introspection_cppExport.cmake
install/serial_port/lib/serial_port/: serial_port_node
install/serial_port/share/serial_port/: package.sh
log/: latest_build
src/camera_display/: CMakeLists.txt
src/camera_display/src/: camera_display.cpp
src/camera_interface/: CMakeLists.txt
src/camera_interface/msg/: Corner.msg
src/corner_detection/: CMakeLists.txt
src/corner_detection/src/: corner_detection.cpp
src/image_display/: CMakeLists.txt  package.xml
src/image_display/src/: image_display.cpp
src/image_processing/: CMakeLists.txt
src/image_processing/src/: bgr2gray.cpp  image_info.cpp
src/mnist_bp/: CMakeLists.txt  package.xml
src/mnist_bp/src/: mmist_bp_node.cpp
src/pose_resolve/: CMakeLists.txt
src/pose_resolve/sources/calibration/: calibrate.txt  calibrate2.txt
src/pose_resolve/sources/corner_postion/: corner_3d.txt
src/pose_resolve/src/: pose_resolve_node.cpp
src/serial_port/: CMakeLists.txt  package.xml
src/serial_port/src/: serial_port_node.cpp
(+4 files in other folders)
